<resources>
    <string name="app_name">Shopping List</string>
    <string name="title_activity_autocomplete_dictionary">Autocomplete Dictionary</string>
    <string name="title_activity_rearrange_items">Rearrange Mode</string>
    <string name="edit_text_hint_placeholder">Replace this with your own hint…</string>
    <string name="generic_error">An error occurred.</string>
    <string name="main_activity_no_items">You have no items in your shopping list.
        \nPlease add an item by pressing <b>+</b>.</string>
    <string name="over_budget_dialog_body">You are over budget. Please remove unneeded items or
        replace some items with a cheaper brand.</string>
    <string name="over_budget_dialog_dismiss_button">OK</string>
    <string name="main_activity_footer_over_budget_warning">You are over budget.</string>
    <string name="main_activity_footer_asterisk_footnote">* Optional</string>
    <string name="main_activity_footer_dagger_footnote">&#8224; Has condition</string>
    <string name="footer_total_with_budget">$%.2f / $%.2f</string>
    <string name="footer_total_no_budget">$%.2f</string>
    <string name="footer_grand_total_with_budget">Total: $%.2f / $%.2f</string>
    <string name="footer_grand_total_no_budget">Total: $%.2f</string>
    <string name="main_menu_option_calculator">Calculator</string>
    <string name="main_menu_option_delete_all">Delete all items</string>
    <string name="main_menu_option_rearrange_items">Rearrange items</string>
    <string name="main_menu_option_settings">Settings</string>
    <string name="item_placeholder_calc_per_unit_no_tax">$%.2f &#215; %d =\u0020</string>
    <string name="item_placeholder_calc_per_unit">$%.2f &#215; %d + $%.2f tax =\u0020</string>
    <string name="item_decimal_format_weight">#.###</string>
    <string name="item_placeholder_calc_per_weight_no_tax">$%.2f &#215; %skg =\u0020</string>
    <string name="item_placeholder_calc_per_weight">$%.2f &#215; %skg + $%.2f tax =\u0020</string>
    <string name="item_placeholder_price">$%.2f</string>
    <string name="item_placeholder_extended_n_items">$%.2f for %d items + $%.2f tax =\u0020</string>
    <string name="item_placeholder_extended_n_items_no_tax">%d items\u0020</string>
    <string name="empty" />
    <string name="price_prefix">$</string>
    <string name="price_suffix" />
    <string name="percent_suffix">%</string>
    <string name="times_sign">&#215;</string>
    <string name="dagger">&#8224;</string>
    <string name="add_new_item_dialog_title">Add new item to shopping list</string>
    <string name="add_new_item_dialog_single_item">Single item</string>
    <string name="add_new_item_dialog_extended_item">Extended item</string>
    <string name="add_new_item_dialog_add_item_hint">Item name</string>
    <string name="add_new_item_dialog_save_prompt">Save this item to the autocomplete dictionary
    </string>
    <string name="add_new_item_dialog_optional_prompt">Make this item optional</string>
    <string name="add_new_item_dialog_condition_hint">(Optional) Condition to buy item</string>
    <string name="add_new_item_dialog_positive">Add &amp; finish</string>
    <string name="add_new_item_dialog_negative">Cancel</string>
    <string name="add_new_item_dialog_neutral">Add another</string>
    <string name="shopping_list_item_menu_option_delete">Delete</string>
    <string name="delete_item_dialog_body">Are you sure you want to delete this item?</string>
    <string name="delete_item_dialog_positive">Yes, delete</string>
    <string name="delete_item_dialog_negative">No, cancel</string>
    <string name="delete_all_dialog_title">Delete all items</string>
    <string name="delete_all_dialog_body">You are about to delete all items from the shopping list.
        This includes unmarked items, confirmed items, and items you have specified that you are not
        buying. Are you sure you wish to do this?</string>
    <string name="delete_all_dialog_positive">Yes, delete all items</string>
    <string name="delete_all_dialog_negative">No, cancel</string>
    <string name="item_dialog_subitem_title">Add new item to this category</string>
    <string name="item_dialog_hint_item_name">Item name</string>
    <string name="per_unit">Per unit</string>
    <string name="per_pound">Per lb</string>
    <string name="per_kg">Per kg</string>
    <string name="pricing">Pricing</string>
    <string name="price">Price</string>
    <string name="item_dialog_hint_price">0.00</string>
    <string name="item_dialog_hint_weight">0.0</string>
    <string name="item_dialog_hint_ounces">0</string>
    <string name="price_per_unit">Price per unit</string>
    <string name="price_per_kg">Price per kilogram</string>
    <string name="price_per_lb">Price per pound</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="oz">oz</string>
    <string name="price_before_tax">Price before tax</string>
    <string name="tax">Tax</string>
    <string name="total_price">Total price</string>
    <string name="item_dialog_unchecked_positive">Confirm</string>
    <string name="item_dialog_subitem_positive">Add this item</string>
    <string name="item_dialog_unchecked_neutral">I am not buying this</string>
    <string name="item_dialog_unchecked_negative">Cancel</string>
    <string name="item_dialog_checked_positive">Save changes</string>
    <string name="item_dialog_checked_neutral">Move back to unchecked</string>
    <string name="item_dialog_checked_negative">Cancel</string>
    <string name="item_dialog_not_buying_body">You have specified that you are not buying this item.
        Would you like to restore this item to the shopping list?</string>
    <string name="item_dialog_not_buying_positive">Yes, restore</string>
    <string name="item_dialog_not_buying_negative">No, cancel</string>
    <string name="item_dialog_condition_heading">You are only allowed to buy this item under the
        following conditions:</string>
    <string name="item_dialog_condition_prompt">Have these conditions been met?</string>
    <string name="item_dialog_condition_positive">Yes, proceed</string>
    <string name="item_dialog_condition_negative">No, cancel</string>
    <string name="item_dialog_description_decrease_quantity">Decrease quantity by 1</string>
    <string name="item_dialog_description_increase_quantity">Increase quantity by 1</string>
    <string name="item_dialog_error_failed_to_save">Failed to save this item. Please try
        again.</string>
    <string name="item_dialog_extended_total_price_footer">$</string>
    <string name="item_dialog_placeholder_total_price_no_tax">$%.2f</string>
    <string name="item_dialog_placeholder_tax">+ $%.2f</string>
    <string name="item_dialog_placeholder_total_price">$%.2f</string>
    <string name="item_dialog_placeholder_price_edit_text">%.2f</string>
    <string name="item_dialog_decimal_format_weight_edit_text">#.###</string>
    <string name="settings_fragment_toast_invalid_budget">Your budget must be larger than your
        warning value.</string>
    <string name="settings_fragment_toast_invalid_warning">The warning value cannot be larger than
        your budget.</string>
    <string name="pref_title_budget">Budget</string>
    <string name="pref_title_set_maximum_budget">Set maximum budget</string>
    <string name="pref_title_budget_settings">Budget settings</string>
    <string name="pref_title_maximum_budget">Budget</string>
    <string name="pref_title_budget_warning">Warning</string>
    <string name="pref_title_set_warning">Set warning</string>
    <string name="pref_title_warning_type">Type</string>
    <string name="pref_list_entry_warning_fixed">Fixed amount</string>
    <string name="pref_list_entry_warning_percentage">Percentage of budget</string>
    <string name="pref_value_warn_fixed_price" translatable="false">fixed_amount_val</string>
    <string name="pref_value_warn_percentage" translatable="false">percentage_val</string>
    <string name="pref_title_warning_fixed">Amount</string>
    <string name="pref_title_warning_percentage">Percentage</string>
    <string name="pref_title_tax">Tax</string>
    <string name="pref_title_include_tax">Include tax</string>
    <string name="pref_title_tax_rate">Tax rate</string>
    <string name="pref_title_autocomplete">Autocomplete</string>
    <string name="pref_title_enable_autocomplete">Enable autocomplete</string>
    <string name="pref_title_manage_autocomplete_dictionary">Manage autocomplete dictionary</string>
    <string name="money_pref_dialog_positive">Confirm</string>
    <string name="money_pref_dialog_negative">Cancel</string>
    <string name="percent_pref_dialog_positive">Confirm</string>
    <string name="percent_pref_dialog_negative">Cancel</string>
    <string name="pref_placeholder_seek_bar_edit_text">%d</string>
    <string name="key_root" translatable="false">root_preference_screen</string>
    <string name="key_budget_subscreen" translatable="false">budget_subscreen</string>
    <string name="key_set_maximum_budget_checkbox" translatable="false">set_max_budget</string>
    <string name="key_maximum_budget_edit_text" translatable="false">max_budget</string>
    <string name="key_set_warning_checkbox" translatable="false">set_warning</string>
    <string name="key_warning_type_list" translatable="false">warning_type</string>
    <string name="key_warning_fixed_edit_text" translatable="false">warning_fixed</string>
    <string name="key_warning_percentage_seek_bar" translatable="false">warning_percentage</string>
    <string name="key_include_tax_checkbox" translatable="false">include_tax</string>
    <string name="key_tax_rate_edit_text" translatable="false">tax_rate</string>
    <string name="key_enable_autocomplete_checkbox" translatable="false">enable_autocomplete
    </string>
    <string name="key_autocomplete_dictionary_intent" translatable="false">autocomplete_intent
    </string>
    <string name="pref_default_maximum_budget">100.00</string>
    <string name="pref_default_warning_fixed">80.00</string>
    <string name="pref_default_tax_rate" translatable="false">13</string>
    <string name="autocomplete_menu_option_delete_all">Delete all entries</string>
    <string name="autocomplete_no_entries">There are no entries in the autocomplete dictionary.
    \nTo add an entry, press <b>+</b>, or add an item to the shopping list.</string>
    <string name="autocomplete_delete_all_dialog_body">Are you sure you wish to delete all entries
        from the autocomplete dictionary?</string>
    <string name="autocomplete_delete_all_dialog_positive">Yes, delete all entries</string>
    <string name="autocomplete_add_entry_dialog_positive">Add entry</string>
    <string name="autocomplete_add_entry_dialog_negative">Cancel</string>
    <string name="autocomplete_add_entry_dialog_title">Add new entry to autocomplete dictionary
    </string>
    <string name="autocomplete_add_entry_dialog_prompt">Please specify the name of the entry you
        wish to add in the field below.</string>
    <string name="autocomplete_add_entry_dialog_hint">Entry name</string>
    <string name="autocomplete_delete_entry_dialog_body">Delete this entry?</string>
    <string name="autocomplete_delete_entry_dialog_positive">Delete</string>
    <string name="autocomplete_delete_entry_dialog_negative">Cancel</string>
    <string name="rearrange_content_description_drag_handle">Drag handle</string>
    <string name="rearrange_menu_option_help">Help</string>
    <string name="rearrange_help_dialog_body">To move an item, touch the item on the left side and
        drag it to the desired position. When you are satisfied with the order of the items, press
        &#x2713; to save the order. To discard all changes and keep the previous order, press the
        back button.</string>
    <string name="rearrange_help_dialog_dismiss_button">OK</string>
</resources>