<?xml version="1.0" encoding="utf-8"?>

<!-- I am aware that this file is identical to dialog_buying_item.xml in every way except for an
AutoCompleteTextView and a CheckBox added to the beginning, and so this violates the DRY principle.
The reason I am still using this file is that it is the only method I have found to get the
soft keyboard to show up as soon as the dialog appears. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="24dp">

    <AutoCompleteTextView
        android:id="@+id/et_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="@string/item_dialog_hint_item_name"
        android:inputType="textCapSentences|textAutoCorrect" />

    <CheckBox
        android:id="@+id/save_item_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/add_new_item_dialog_save_prompt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pricing"
        android:textColor="@color/somewhat_transparent_black"
        android:textSize="@dimen/text_size_label" />

    <RadioGroup
        android:id="@+id/radio_group_pricing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="4dp">

        <RadioButton
            android:id="@+id/rb_per_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/per_unit"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

        <RadioButton
            android:id="@+id/rb_per_kg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/per_kg"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

        <RadioButton
            android:id="@+id/rb_per_pound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/per_pound"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_per_unit"
                android:textColor="@color/somewhat_transparent_black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_prefix"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_dialog_hint_price"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_suffix"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/times_sign"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_if_per_unit_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/quantity"
                android:textColor="@color/somewhat_transparent_black"
                android:textSize="@dimen/text_size_label" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/item_dialog_description_decrease_quantity"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_remove_black_24dp" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

                <ImageButton
                    android:id="@+id/btn_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/item_dialog_description_increase_quantity"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:src="@drawable/ic_add_black_24dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_if_per_kg_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/somewhat_transparent_black"
                android:textSize="@dimen/text_size_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_kg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_dialog_hint_weight"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kg"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_if_per_lb_selected"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/somewhat_transparent_black"
                android:textSize="@dimen/text_size_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_lb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_dialog_hint_weight"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:color="@color/black"
                    android:text="@string/lb"
                    android:textSize="@dimen/text_size_variable" />

                <EditText
                    android:id="@+id/et_oz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/item_dialog_hint_ounces"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oz"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_variable" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_total_price_no_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/price_before_tax"
            android:textColor="@color/somewhat_transparent_black"
            android:textSize="@dimen/text_size_label" />

        <TextView
            android:id="@+id/tv_total_item_price_no_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/tax"
            android:textColor="@color/somewhat_transparent_black"
            android:textSize="@dimen/text_size_label" />

        <TextView
            android:id="@+id/tv_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/total_price"
            android:textColor="@color/somewhat_transparent_black"
            android:textSize="@dimen/text_size_label" />

        <TextView
            android:id="@+id/tv_total_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

    </LinearLayout>

</LinearLayout>