<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018 Oleksiy Bolgarov.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software
  ~ and associated documentation files (the "Software"), to deal in the Software without
  ~ restriction, including without limitation the rights to use, copy, modify, merge, publish,
  ~ distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the
  ~ Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or
  ~ substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
  ~ BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
  ~ NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
  ~ DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="12dp">

    <RadioGroup
        android:id="@+id/rg_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_single_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/add_new_item_dialog_single_item"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

        <RadioButton
            android:id="@+id/rb_extended_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_new_item_dialog_extended_item"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_variable" />

    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/item_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_item_dialog_add_item_hint"
        android:inputType="textCapSentences|textAutoCorrect" />

    <CheckBox
        android:id="@+id/save_item_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/add_new_item_dialog_save_prompt" />

    <CheckBox
        android:id="@+id/make_item_optional_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_item_dialog_optional_prompt" />

    <EditText
        android:id="@+id/condition_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_item_dialog_condition_hint"
        android:inputType="textCapSentences|textAutoCorrect|textMultiLine" />

</LinearLayout>